[gd_scene load_steps=2 format=3 uid="uid://bpausemenuui"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0

[node name="Title" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResumeBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="SkillsBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Skills & Techniques"

[node name="InventoryBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="PortfolioBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Portfolio"

[node name="AchievementsBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Achievements"

[node name="Spacer2" type="Control" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="SaveBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="LoadBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Spacer3" type="Control" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainMenuBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitBtn" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"